changed the placeholder to spans. fixed white space between spans.

--- a/50projects50days/8_form_wave/form.css
+++ b/50projects50days/8_form_wave/form.css
@@ -45,14 +45,41 @@ input {
     color: white;
     width: 80%;
     margin: auto;
+    position: relative;
+    z-index: 0;
 }
 
 input:first-of-type {
     grid-row: 2;
 }
 
+label {
+    position: absolute;
+    z-index: 1;
+    font-size: large;
+}
+
+label > * {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+}
+
+label:first-of-type {
+    grid-row: 2;
+    top: 35px;
+    left: 40px;
+}
+
 input:nth-of-type(2) {
     grid-row: 3;
+}
+
+label:nth-of-type(2) {
+    grid-row: 3;
+    top: 35px;
+    left: 40px;
 }
 
 button {
